--- a/CoreSpatial/CoreSpatial.csproj
+++ b/CoreSpatial/CoreSpatial.csproj
@@ -4,7 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyVersion>0.1.0.0</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
-    <Version>0.1.0</Version>
+    <Version>0.1.1</Version>
+    <PackageId>CoreSpatial</PackageId>
+    <Authors>zxyao</Authors>
+    <Company></Company>
+    <RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
+    <Description>
+      CoreSpatial is a class library based on .Net core v3.1 to read and write shapefiles. It supports the reading and writing of projection file .prj (support by ProjNet).
+    </Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="ProjNet" Version="2.0.0" />
