--- a/CoreSpatial.Converter/CoreSpatial.Converter.csproj
+++ b/CoreSpatial.Converter/CoreSpatial.Converter.csproj
@@ -1,15 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <AssemblyVersion>0.2.0.0</AssemblyVersion>
+    <FileVersion>0.2.0.0</FileVersion>
+    <Version>0.2.1</Version>
+    <PackageId>CoreSpatial.Converter</PackageId>
+    <Authors>zxyao</Authors>
+    <Company></Company>
+    <RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
+    <Description>
+      Corespatial.Converter is an extension of Corespatial for data format conversion
+    </Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Jil" Version="2.17.0" />
+    <PackageReference Include="CoreSpatial" Version="0.2.1" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CoreSpatial\CoreSpatial.csproj" />
-  </ItemGroup>
-
 </Project>
