--- a/CoreSpatial.Converter/CoreSpatial.Converter.csproj
+++ b/CoreSpatial.Converter/CoreSpatial.Converter.csproj
@@ -4,8 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyVersion>0.2.0.0</AssemblyVersion>
     <FileVersion>0.2.0.0</FileVersion>
-    <Version>0.2.1</Version>
+    <Version>0.2.2</Version>
     <PackageId>CoreSpatial.Converter</PackageId>
+    <PackageTags>CoreSpatial;data format conversion</PackageTags>
     <Authors>zxyao</Authors>
     <Company></Company>
     <RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
@@ -16,6 +17,6 @@
 
   <ItemGroup>
     <PackageReference Include="Jil" Version="2.17.0" />
-    <PackageReference Include="CoreSpatial" Version="0.2.1" />
+    <PackageReference Include="CoreSpatial" Version="0.2.2" />
   </ItemGroup>
 </Project>
