--- a/CoreSpatial.Converter/CoreSpatial.Converter.csproj
+++ b/CoreSpatial.Converter/CoreSpatial.Converter.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyVersion>0.2.0.0</AssemblyVersion>
-    <FileVersion>0.2.0.0</FileVersion>
-    <Version>0.2.5</Version>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <AssemblyVersion>0.3.0.0</AssemblyVersion>
+    <FileVersion>0.3.0.0</FileVersion>
+    <Version>0.3.0</Version>
     <PackageId>CoreSpatial.Converter</PackageId>
     <PackageTags>CoreSpatial;data format conversion</PackageTags>
     <Authors>zxyao</Authors>
@@ -17,6 +17,6 @@
 
   <ItemGroup>
     <PackageReference Include="Jil" Version="2.17.0" />
-    <PackageReference Include="CoreSpatial" Version="0.2.5" />
+    <PackageReference Include="CoreSpatial" Version="0.3.0" />
   </ItemGroup>
 </Project>
