--- a/CoreSpatial/CoreSpatial.csproj
+++ b/CoreSpatial/CoreSpatial.csproj
@@ -1,17 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <AssemblyVersion>0.2.0.0</AssemblyVersion>
-    <FileVersion>0.2.0.0</FileVersion>
-    <Version>0.2.5</Version>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <AssemblyVersion>0.3.0.0</AssemblyVersion>
+    <FileVersion>0.3.0.0</FileVersion>
+    <Version>0.3.0</Version>
     <PackageId>CoreSpatial</PackageId>
     <Authors>zxyao</Authors>
     <PackageTags>shapefile;gis</PackageTags>
     <Company></Company>
     <RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
     <Description>
-      CoreSpatial is a class library based on .Net core v3.1 to read and write shapefiles. It supports the reading and writing of projection file .prj (support by ProjNet).
+      CoreSpatial is a class library based on .Net Standard v2.1 to read and write shapefiles. It supports the reading and writing of projection file .prj (support by ProjNet).
     </Description>
   </PropertyGroup>
   <ItemGroup>
