--- a/CoreSpatial.Nts/CoreSpatial.Nts.csproj
+++ b/CoreSpatial.Nts/CoreSpatial.Nts.csproj
@@ -5,17 +5,18 @@
     <AssemblyVersion>0.3.1.0</AssemblyVersion>
     <FileVersion>0.3.1.0</FileVersion>
     <Version>0.3.1</Version>
-    <PackageId>CoreSpatial</PackageId>
+    <PackageId>CoreSpatial.Nts</PackageId>
     <Authors>zxyao</Authors>
     <PackageTags>shapefile;gis;corespatial</PackageTags>
     <Company></Company>
     <RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
-    <Description>CoreSpatial is a class library based on .Net Standard v2.1 to read and write shapefiles. It supports the reading and writing of projection file .prj (support by ProjNet).
-</Description>
-    <PackageProjectUrl></PackageProjectUrl>
+    <Description>For object conversion between CoreSpatial and NetTopologySuite(Geometry) and NetTopologySuite.Features(Feature, FeatureCollection)</Description>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="ProjNet" Version="2.0.0" />
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.0" />
+    <PackageReference Include="CoreSpatial" Version="0.3.1" />
+    <PackageReference Include="NetTopologySuite" Version="2.0.0" />
+    <PackageReference Include="NetTopologySuite.Features" Version="2.1.0" />
   </ItemGroup>
+
 </Project>
