--- a/CoreSpatial.Nts/CoreSpatial.Nts.csproj
+++ b/CoreSpatial.Nts/CoreSpatial.Nts.csproj
@@ -7,7 +7,7 @@
     <Version>0.3.1</Version>
     <PackageId>CoreSpatial.Nts</PackageId>
     <Authors>zxyao</Authors>
-    <PackageTags>shapefile;gis;corespatial</PackageTags>
+    <PackageTags>shapefile;gis;corespatial;NetTopologySuite;NTS</PackageTags>
     <Company></Company>
     <RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
     <Description>For object conversion between CoreSpatial and NetTopologySuite(Geometry) and NetTopologySuite.Features(Feature, FeatureCollection)</Description>
