--- a/CoreSpatial/CoreSpatial.csproj
+++ b/CoreSpatial/CoreSpatial.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyVersion>0.3.1.0</AssemblyVersion>
-    <FileVersion>0.3.1.0</FileVersion>
-    <Version>0.3.1</Version>
+    <AssemblyVersion>0.3.1.1</AssemblyVersion>
+    <FileVersion>0.3.1.1</FileVersion>
+    <Version>0.3.1-getfileBytes</Version>
     <PackageId>CoreSpatial</PackageId>
     <Authors>zxyao</Authors>
     <PackageTags>shapefile;gis;corespatial</PackageTags>
