--- a/CoreSpatial.Analysis/CoreSpatial.Analysis.csproj
+++ b/CoreSpatial.Analysis/CoreSpatial.Analysis.csproj
@@ -1,15 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<AssemblyVersion>0.1.0.0</AssemblyVersion>
+		<FileVersion>0.1.0.0</FileVersion>
+		<Version>0.1.0</Version>
+		<PackageId>CoreSpatial.Analysis</PackageId>
+		<RepositoryType>git</RepositoryType>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<Copyright>zxyao</Copyright>
+		<Authors>zxyao</Authors>
+		<PackageTags>shapefile;gis;corespatial;corespatial.analysis</PackageTags>
+		<Company></Company>
+		<RepositoryUrl>https://github.com/zxyao/CoreSpatial</RepositoryUrl>
+		<PackageProjectUrl>https://github.com/zxyao/CoreSpatial</PackageProjectUrl>
+		<Description>A spatial analysis library based on CoreSpatial</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="CoreSpatial" Version="0.3.4" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CoreSpatial\CoreSpatial.csproj" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<PackageReference Include="CoreSpatial" Version="0.3.4" />
+	</ItemGroup>
 </Project>
