--- a/CoreSpatial.Analysis/CoreSpatial.Analysis.csproj
+++ b/CoreSpatial.Analysis/CoreSpatial.Analysis.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<AssemblyVersion>0.1.0.0</AssemblyVersion>
-		<FileVersion>0.1.0.0</FileVersion>
-		<Version>0.1.0</Version>
+		<TargetFramework>net5.0</TargetFramework>
+		<AssemblyVersion>0.4.0.0</AssemblyVersion>
+		<FileVersion>0.4.0.0</FileVersion>
+		<Version>0.4.0</Version>
 		<PackageId>CoreSpatial.Analysis</PackageId>
 		<RepositoryType>git</RepositoryType>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -17,7 +17,11 @@
 		<Description>A spatial analysis library based on CoreSpatial</Description>
 	</PropertyGroup>
 
+	<!--<ItemGroup>
+		<PackageReference Include="CoreSpatial" Version="0.4.0" />
+	</ItemGroup>-->
+
 	<ItemGroup>
-		<PackageReference Include="CoreSpatial" Version="0.3.5" />
+		<ProjectReference Include="..\CoreSpatial\CoreSpatial.csproj" />
 	</ItemGroup>
 </Project>
