--- a/CoreSpatial.Nts/CoreSpatial.Nts.csproj
+++ b/CoreSpatial.Nts/CoreSpatial.Nts.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<AssemblyVersion>0.3.5.0</AssemblyVersion>
-		<FileVersion>0.3.5.0</FileVersion>
-		<Version>0.3.5</Version>
+		<TargetFramework>net5.0</TargetFramework>
+		<AssemblyVersion>0.4.0.0</AssemblyVersion>
+		<FileVersion>0.4.0.0</FileVersion>
+		<Version>0.4.0</Version>
 		<PackageId>CoreSpatial.Nts</PackageId>
 		<Authors>zxyao</Authors>
 		<PackageTags>shapefile;gis;corespatial;NetTopologySuite;NTS</PackageTags>
@@ -14,9 +14,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CoreSpatial" Version="0.3.5" />
+		<!--<PackageReference Include="CoreSpatial" Version="0.4.0" />-->
 		<PackageReference Include="NetTopologySuite" Version="2.0.0" />
 		<PackageReference Include="NetTopologySuite.Features" Version="2.1.0" />
 	</ItemGroup>
-
+	
+	<ItemGroup>
+		<ProjectReference Include="..\CoreSpatial\CoreSpatial.csproj" />
+	</ItemGroup>
 </Project>
