--- a/CoreSpatial/CoreSpatial.csproj
+++ b/CoreSpatial/CoreSpatial.csproj
@@ -1,9 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
-		<AssemblyVersion>0.3.5.0</AssemblyVersion>
-		<FileVersion>0.3.5.0</FileVersion>
-		<Version>0.3.5</Version>
+		<TargetFramework>net5.0</TargetFramework>
+		<AssemblyVersion>0.4.0.0</AssemblyVersion>
+		<FileVersion>0.4.0.0</FileVersion>
+		<Version>0.4.0</Version>
 		<PackageId>CoreSpatial</PackageId>
 		<Authors>zxyao</Authors>
 		<PackageTags>shapefile;gis;corespatial</PackageTags>
@@ -16,6 +16,6 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="ProjNet" Version="2.0.0" />
-		<PackageReference Include="System.Text.Encoding.CodePages" Version="4.7.1" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0-rc.2.20475.5" />
 	</ItemGroup>
 </Project>
