--- a/CoreSpatial.Converter/CoreSpatial.Converter.csproj
+++ b/CoreSpatial.Converter/CoreSpatial.Converter.csproj
@@ -1,19 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
-		<AssemblyVersion>0.4.0.0</AssemblyVersion>
-		<FileVersion>0.4.0.0</FileVersion>
-		<Version>0.4.0</Version>
 		<PackageId>CoreSpatial.Converter</PackageId>
 		<PackageTags>CoreSpatial;data format conversion</PackageTags>
-		<Authors>zxyao</Authors>
-		<Company></Company>
-		<RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
 		<Description>
 			Corespatial.Converter is an extension of Corespatial for data format conversion
 		</Description>
 	</PropertyGroup>
+
+	<Import Project="..\assembly.proj" />
 
 	<ItemGroup>
 		<!--<PackageReference Include="CoreSpatial" Version="0.4.0" />-->
