--- a/CoreSpatial.Nts/CoreSpatial.Nts.csproj
+++ b/CoreSpatial.Nts/CoreSpatial.Nts.csproj
@@ -1,17 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
-		<AssemblyVersion>0.4.0.0</AssemblyVersion>
-		<FileVersion>0.4.0.0</FileVersion>
-		<Version>0.4.0</Version>
 		<PackageId>CoreSpatial.Nts</PackageId>
-		<Authors>zxyao</Authors>
 		<PackageTags>shapefile;gis;corespatial;NetTopologySuite;NTS</PackageTags>
-		<Company></Company>
-		<RepositoryUrl>https://github.com/zxyao145/CoreSpatial</RepositoryUrl>
 		<Description>For object conversion between CoreSpatial and NetTopologySuite(Geometry) and NetTopologySuite.Features(Feature, FeatureCollection)</Description>
 	</PropertyGroup>
+
+	<Import Project="..\assembly.proj" />
 
 	<ItemGroup>
 		<!--<PackageReference Include="CoreSpatial" Version="0.4.0" />-->
